﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Code changes:
	
    Bug fixes:
        -Several methods in the public API did not check arguments for null. Work item 7533.
        -
    

Version 1.3.0.10246 (1.3) 2010-09-03
	General description:
	    This release has some great usability improvements. First of all the new XmlFileLoggingProvider has
	    been added to allow writing information to the file system in an XML format. Besides this, all loggers
	    now allow to be created using code-based configuration. This means that the you can use the library
	    without using the static Logger class and without having to configure it in the application 
	    configuration file. Next, the AspNetSqlLoggingProvider now allows to log name of the currently logged
	    in user, without needing the System.Web.Security.Membership. Last but not least, all loggers now
	    support the logging of exceptions with multiple inner exceptions, which is will be a very common
	    scenario from .NET 4.0 and up.
	
	Code changes:
	    -The AspNetExceptionLoggingModule will now hook up to the AppDomain.UnhandledException event to log
	     any fatal exceptions that might take the AppDomain down.
	    -Added a base class FileLoggingProviderBase that acts as base class for logging to a file.
	    -A new XmlFileLoggingProvider has been added. Work item 6006.
		-The library is now able to handle exceptions with multiple inner exceptions. Work item 4028
		 When an Exception contains a public 'InnerExceptions' property (such as both the .NET 4.0 
		 System.AggregateException and CuttingEdge.Logging.CompositeException contain), the framework will use
		 this property instead of the InnerException property. The SqlLoggingProvider and
		 AspNetSqlLoggingProvider will store all inner exceptions in the database. The MailLoggingProvider and 